<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PriusMonitor</string>
    <string name="action_settings">Settings</string>
    <string name="water_temp_name">WaterTemp</string>
    <string name="voltage_name">Valtage</string>
    <string name="water_temp_value">0</string>
    <string name="voltage_value">0</string>
    <string name="voltage_unit">V</string>
    <string name="water_temp_unit">℃</string>

    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
   
    <!--  BluetoothDeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>
</resources>
